Fix maven javadoc with enable-preview